k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: massive-game-server
  labels:
    app: massive-game-server
spec:
  type: ClusterIP
  selector:
    app: massive-game-server
  ports:
    - name: http
      port: 8080
      targetPort: http
